# mu

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  EBNF.md  LICENSE  README.md  SECURITY.md  SPEC.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  codeql.yml  fuzz.yml  pages.yml
apps/mu_arena/: AGENTS.md  README.md
apps/mu_dungeon/: AGENTS.md  README.md
apps/signal_reactor/: AGENTS.md  FINDINGS.md  README.md
crates/mu_wasm/: Cargo.toml
docs/: BYTECODE.md  FUZZING.md  SEMANTICS.md  language-tour.md  release-v0.1.0.md
examples/: hello.mu  http.mu  json.mu
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_bytecode_decode.rs  fuzz_fmt_roundtrip.rs  fuzz_lexer.rs  fuzz_parser.rs  fuzz_vm_step.rs
src/: ast.rs  bytecode.rs  cli.rs  fmt.rs  lexer.rs  lib.rs  main.rs  parser.rs  typecheck.rs  vm.rs
src/stdlib/: mod.rs
tests/: acceptance.rs  bytecode_golden.rs  cli_commands.rs  cli_smoke.rs  diagnostics.rs  equiv_v02.rs  formatter_check.rs  lexer_grammar.rs  mu_arena_app.rs  mu_arena_token_economy.rs  mu_dungeon_app.rs  mu_dungeon_token_economy.rs  parser_errors.rs  parser_grammar.rs  parser_roundtrip.rs  property_roundtrip.rs  semantics_golden.rs  signal_reactor_app.rs  signal_reactor_token_economy.rs  token_efficiency.rs  typechecker.rs  vm_run.rs
tests/bytecode/: bad_header.mub  bad_jump_target.mub  minimal_valid.mub  truncated.mub  unknown_opcode.mub
tests/semantics/: division_by_zero.mu  division_by_zero.stderr  eval_order.mu  eval_order.stdout  non_exhaustive_match.mu  (+2 more)
web/: index.html  package-lock.json  package.json  vite.config.js
(+41 files in other folders)
